# ats-resume-checker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
ats_checker/: __main__.py  checker.py  cli.py  llm.py  parser.py
tests/: conftest.py  test_checker.py  test_cli.py  test_llm.py  test_parser.py
