[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-resume-checker"
version = "0.1.0"
description = "Simple CLI tool to score resumes for ATS compatibility."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]

[project.scripts]
ats-check = "ats_checker.cli:main"

[tool.setuptools.packages.find]
include = ["ats_checker*"]
